@@ -1,11 +1,19 @@
 package com.swp391_se1866_group2.hiv_and_medical_system.schedule.consultation.service;
 
+import com.swp391_se1866_group2.hiv_and_medical_system.appointment.entity.Appointment;
+import com.swp391_se1866_group2.hiv_and_medical_system.appointment.repository.AppointmentRepository;
+import com.swp391_se1866_group2.hiv_and_medical_system.common.enums.AppointmentStatus;
+import com.swp391_se1866_group2.hiv_and_medical_system.common.enums.ScheduleSlotStatus;
+import com.swp391_se1866_group2.hiv_and_medical_system.common.enums.TicketType;
 import com.swp391_se1866_group2.hiv_and_medical_system.common.exception.AppException;
 import com.swp391_se1866_group2.hiv_and_medical_system.common.exception.ErrorCode;
 import com.swp391_se1866_group2.hiv_and_medical_system.common.mapper.ScheduleMapper;
 import com.swp391_se1866_group2.hiv_and_medical_system.doctor.dto.response.DoctorResponse;
 import com.swp391_se1866_group2.hiv_and_medical_system.doctor.entity.Doctor;
 import com.swp391_se1866_group2.hiv_and_medical_system.doctor.service.DoctorService;
+import com.swp391_se1866_group2.hiv_and_medical_system.patient.entity.Patient;
+import com.swp391_se1866_group2.hiv_and_medical_system.patient.repository.PatientRepository;
+import com.swp391_se1866_group2.hiv_and_medical_system.schedule.consultation.dto.request.ScheduleBlockRequest;
 import com.swp391_se1866_group2.hiv_and_medical_system.schedule.consultation.dto.request.ScheduleCreationRequest;
 import com.swp391_se1866_group2.hiv_and_medical_system.schedule.consultation.dto.request.ScheduleUpdateRequest;
 import com.swp391_se1866_group2.hiv_and_medical_system.schedule.consultation.dto.response.*;
@@ -14,6 +22,7 @@ import com.swp391_se1866_group2.hiv_and_medical_system.schedule.consultation.ent
 import com.swp391_se1866_group2.hiv_and_medical_system.schedule.consultation.repository.DoctorWorkScheduleRepository;
 import com.swp391_se1866_group2.hiv_and_medical_system.schedule.consultation.repository.ScheduleSlotRepository;
 import com.swp391_se1866_group2.hiv_and_medical_system.slot.service.SlotService;
+import com.swp391_se1866_group2.hiv_and_medical_system.ticket.service.TicketService;
 import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
 import lombok.experimental.FieldDefaults;
@@ -22,9 +31,7 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.time.DayOfWeek;
 import java.time.LocalDate;
-import java.util.ArrayList;
-import java.util.HashSet;
-import java.util.List;
+import java.util.*;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.stream.Collectors;
 
@@ -35,8 +42,11 @@ import java.util.stream.Collectors;
 public class DoctorWorkScheduleService {
     DoctorWorkScheduleRepository doctorWorkScheduleRepository;
     ScheduleSlotRepository scheduleSlotRepository;
+    AppointmentRepository appointmentRepository;
+    PatientRepository patientRepository;
     SlotService slotService;
     DoctorService doctorService;
+    TicketService ticketService;
     ScheduleMapper scheduleMapper;
 
     //    @PreAuthorize("hasRole('ADMIN') or hasRole('MANAGER') ")
@@ -102,14 +112,19 @@ public class DoctorWorkScheduleService {
         ScheduleDTOResponse scheduleDTOResponse = scheduleMapper.toScheduleDTOResponse(scheduleResponse);
 
         if(scheduleDTOResponse != null){
-            ScheduleDTOResponse finalScheduleDTOResponse = scheduleDTOResponse;
             scheduleDTOResponse.getScheduleSlots().forEach(
                     scheduleSlotDateResponse -> {
                         if(scheduleSlotDateResponse != null) {
-                            scheduleSlotDateResponse.setDate(finalScheduleDTOResponse.getWorkDate());
+                            scheduleSlotDateResponse.setDate(scheduleDTOResponse.getWorkDate());
                         }
                     }
             );
+            List<ScheduleSlotDateResponse> scheduleSlots = scheduleDTOResponse.getScheduleSlots()
+                    .stream()
+                    .sorted(Comparator.comparing(scheduleSlotDateResponse -> scheduleSlotDateResponse.getSlot().getSlotNumber()))
+                    .toList();
+            scheduleDTOResponse.setScheduleSlots(new LinkedHashSet<>(scheduleSlots));
+            System.out.println(scheduleDTOResponse.getScheduleSlots());
         }else {
             ScheduleDTOResponse scheduleDTOResponseTmp = new ScheduleDTOResponse();
             scheduleDTOResponseTmp.setWorkDate(workDate);
@@ -154,9 +169,13 @@ public class DoctorWorkScheduleService {
             isEqualDate.set(false);
             listDWSchedule.forEach(schedule -> {
                 if(schedule.getWorkDate().equals(finalDateTmp)){
+                    List<ScheduleSlot> sortedSchedule = schedule.getScheduleSlots().stream().sorted(Comparator.comparing(ScheduleSlot::getId)).toList();
+                    schedule.getScheduleSlots().clear();
+                    schedule.getScheduleSlots().addAll(sortedSchedule);
                     scheduleResponseList.add(scheduleMapper.toScheduleResponse(schedule));
                     isEqualDate.set(true);
                 }
+
             });
             if(!isEqualDate.get()) {
                 ScheduleResponse scheduleResponse = new ScheduleResponse();
@@ -177,7 +196,7 @@ public class DoctorWorkScheduleService {
         if(request!= null){
             request.forEach(scheduleCreationRequest -> {
                 if(scheduleCreationRequest.getSlotId() != null && !scheduleCreationRequest.getSlotId().isEmpty()){
-                    doctorWorkScheduleResponses.add(createDoctorSchedule(doctorId, scheduleCreationRequest));
+                    doctorWorkScheduleResponses.add(generateDoctorScheduleCustom(doctorId, scheduleCreationRequest));
                 }
             });
         }
@@ -187,12 +206,13 @@ public class DoctorWorkScheduleService {
 
     public DoctorWorkScheduleResponse generateDoctorScheduleCustom (String doctorId , ScheduleCreationRequest request) {
         Doctor doctor = doctorService.getDoctorById(doctorId);
-        DoctorWorkSchedule schedule = new DoctorWorkSchedule();
-        if(doctorWorkScheduleRepository.existsByWorkDateAndDoctorId(request.getWorkDate(), doctorId)){
-            schedule = doctorWorkScheduleRepository.findByWorkDateAndDoctorId(request.getWorkDate(), doctorId);
+        DoctorWorkSchedule schedule = doctorWorkScheduleRepository.findByWorkDateAndDoctorId(request.getWorkDate(), doctorId);
+        if(schedule == null){
+            schedule = new DoctorWorkSchedule();
+            schedule.setDoctor(doctor);
+            schedule.setWorkDate(request.getWorkDate());
+            schedule = doctorWorkScheduleRepository.save(schedule);
         }
-        schedule.setDoctor(doctor);
-        schedule.setWorkDate(request.getWorkDate());
         DoctorWorkSchedule finalSchedule = schedule;
         List<ScheduleSlot> scheduleSlots = request.getSlotId().stream()
                 .map(slotId -> {
@@ -204,15 +224,40 @@ public class DoctorWorkScheduleService {
                         scheduleSlot = new ScheduleSlot();
                         scheduleSlot.setSlot(slotService.getSlotById(slotId));
                         scheduleSlot.setSchedule(finalSchedule);
+                        finalSchedule.getScheduleSlots().add(scheduleSlot);
                         return scheduleSlot;
                     }
                 })
-                .collect(Collectors.toList());
-        schedule.setScheduleSlots(scheduleSlots);
+                .toList();
         DoctorWorkSchedule doctorWorkSchedule = doctorWorkScheduleRepository.save(schedule);
         return scheduleMapper.toDoctorWorkScheduleResponse(doctorWorkSchedule);
     }
 
+    public boolean blockScheduleSlotByManager (List<Integer> scheduleSlotIDs){
+        List<ScheduleSlot> scheduleSlots = scheduleSlotRepository.findAllById(scheduleSlotIDs);
 
+        scheduleSlots.forEach(scheduleSlot -> {
+            if(scheduleSlot.getStatus().equals(ScheduleSlotStatus.AVAILABLE)){
+                scheduleSlot.setStatus(ScheduleSlotStatus.BLOCKED);
+            }
+        });
+
+        scheduleSlotRepository.saveAll(scheduleSlots);
+        return true;
+    }
+
+    public boolean blockScheduleSlotUnAvaiByManager(ScheduleBlockRequest request){
+        ScheduleSlot scheduleSlot = scheduleSlotRepository.findById(request.getId()).orElseThrow(() -> new AppException(ErrorCode.SCHEDULE_SLOT_NOT_EXISTED));
+
+        if(request.isContinuity()){
+            Patient patient = patientRepository.findPatientByScheduleSlotId(scheduleSlot.getId());
+            ticketService.createTicket(patient.getId(), TicketType.CONSULTATION);
+        }
+        Appointment appointment = appointmentRepository.findAppointmentByScheduleSlotId(scheduleSlot.getId());
+        appointment.setStatus(AppointmentStatus.CANCELLED);
+        scheduleSlot.setStatus(ScheduleSlotStatus.BLOCKED);
+        scheduleSlotRepository.save(scheduleSlot);
+        return true;
+    }
 
 }
